Practica PL/Codigo/Codigo/parser.output
State 90 conflicts: 8 shift/reduce
State 128 conflicts: 2 reduce/reduce
State 129 conflicts: 2 reduce/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 181 conflicts: 2 reduce/reduce
State 182 conflicts: 2 reduce/reduce
State 183 conflicts: 2 reduce/reduce
State 184 conflicts: 2 reduce/reduce
State 185 conflicts: 2 reduce/reduce
State 186 conflicts: 2 reduce/reduce
State 214 conflicts: 2 reduce/reduce
State 215 conflicts: 2 reduce/reduce


Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: TK_algoritmo TK_identificador TK_composicion_secuencial cabecera_alg bloque_alg TK_falgoritmo

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal TK_comentario_pre

    3 bloque_alg: bloque TK_comentario_post

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_cte decl_globales
    6              | %empty

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_cte declaraciones
   13              | declaracion_var declaraciones
   14              | %empty

   15 declaracion_tipo: TK_tipo lista_d_tipo TK_ftipo

   16 declaracion_cte: TK_const lista_d_cte TK_fconst

   17 declaracion_var: TK_var lista_d_var TK_fvar

   18 lista_d_tipo: TK_identificador TK_igual d_tipo TK_composicion_secuencial lista_d_tipo
   19             | %empty

   20 d_tipo: TK_tupla lista_campos TK_ftupla
   21       | TK_tabla TK_inicio_array expresion_t TK_subrango expresion_t TK_fin_array TK_de d_tipo
   22       | TK_identificador
   23       | expresion_t TK_subrango expresion_t
   24       | TK_ref d_tipo
   25       | TK_entero
   26       | TK_booleano
   27       | TK_real
   28       | TK_caracter
   29       | TK_cadena

   30 expresion_t: expresion
   31            | TK_literal_caracter

   32 lista_campos: TK_identificador TK_definicion d_tipo TK_composicion_secuencial lista_campos
   33             | %empty

   34 lista_d_cte: TK_identificador TK_igual TK_literal_cadena TK_composicion_secuencial lista_d_cte
   35            | TK_identificador TK_igual TK_literal_caracter TK_composicion_secuencial lista_d_cte
   36            | TK_identificador TK_igual TK_literal_entero TK_composicion_secuencial lista_d_cte
   37            | TK_identificador TK_igual TK_literal_real TK_composicion_secuencial lista_d_cte
   38            | TK_identificador TK_igual TK_literal_booleano TK_composicion_secuencial lista_d_cte
   39            | %empty

   40 lista_d_var: lista_id_var TK_composicion_secuencial lista_d_var
   41            | %empty

   42 lista_id: TK_identificador TK_separador lista_id
   43         | TK_identificador

   44 lista_id_var_o_no: TK_identificador TK_definicion d_tipo
   45                  | TK_identificador TK_separador lista_id_var
   46                  | %empty

   47 lista_id_var: TK_identificador TK_definicion d_tipo
   48             | TK_identificador TK_separador lista_id_var_o_no

   49 lista_id_ent_o_no: TK_identificador TK_definicion d_tipo
   50                  | TK_identificador TK_separador lista_id_ent
   51                  | %empty

   52 lista_id_ent: TK_identificador TK_definicion d_tipo
   53             | TK_identificador TK_separador lista_id_ent_o_no

   54 lista_id_sal_o_no: TK_identificador TK_definicion d_tipo
   55                  | TK_identificador TK_separador lista_id_sal
   56                  | %empty

   57 lista_id_sal: TK_identificador TK_definicion d_tipo
   58             | TK_identificador TK_separador lista_id_sal_o_no

   59 decl_ent_sal: decl_ent
   60             | decl_ent decl_sal
   61             | decl_sal

   62 decl_ent: TK_ent lista_id_ent TK_composicion_secuencial

   63 decl_sal: TK_sal lista_id_sal TK_composicion_secuencial

   64 exp_a: exp_a TK_op_suma exp_a
   65      | exp_a TK_op_resta exp_a
   66      | exp_a TK_op_multiplicador exp_a
   67      | exp_a TK_op_division exp_a
   68      | exp_a TK_mod exp_a
   69      | exp_a TK_div exp_a
   70      | TK_inicio_parentesis exp_a TK_fin_parentesis
   71      | operando
   72      | TK_literal_real
   73      | TK_literal_entero
   74      | TK_op_resta exp_a
   75      | exp_a TK_y M exp_a
   76      | exp_a TK_o M exp_a
   77      | TK_no exp_a
   78      | TK_literal_booleano
   79      | expresion TK_comparador expresion
   80      | expresion TK_igual expresion

   81 expresion: exp_a
   82          | funcion_ll

   83 operando: TK_identificador
   84         | operando TK_inicio_array expresion TK_fin_array
   85         | operando TK_ref

   86 instrucciones: instruccion TK_composicion_secuencial M instrucciones
   87              | instruccion

   88 instruccion: TK_continuar
   89            | asignacion
   90            | alternativa
   91            | iteracion
   92            | accion_ll

   93 asignacion: operando TK_asignacion expresion

   94 alternativa: TK_si expresion TK_entonces instrucciones lista_opciones TK_fsi

   95 lista_opciones: TK_si_no_si TK_entonces instrucciones lista_opciones
   96               | %empty

   97 iteracion: it_cota_fija
   98          | it_cota_exp

   99 it_cota_exp: TK_mientras expresion TK_hacer instrucciones TK_fmientras

  100 it_cota_fija: TK_para TK_identificador TK_asignacion expresion TK_hasta expresion TK_hacer instrucciones TK_fpara

  101 accion_d: TK_accion a_cabecera bloque TK_faccion

  102 funcion_d: TK_funcion f_cabecera bloque TK_dev expresion TK_ffuncion

  103 a_cabecera: TK_identificador TK_inicio_parentesis d_par_form TK_fin_parentesis TK_composicion_secuencial

  104 f_cabecera: TK_identificador TK_inicio_parentesis lista_d_var TK_fin_parentesis TK_dev d_tipo TK_composicion_secuencial

  105 d_par_form: d_p_form TK_composicion_secuencial d_par_form
  106           | %empty

  107 d_p_form: TK_ent lista_id TK_definicion d_tipo TK_composicion_secuencial
  108         | TK_sal lista_id TK_definicion d_tipo TK_composicion_secuencial
  109         | TK_entsal lista_id TK_definicion d_tipo TK_composicion_secuencial

  110 accion_ll: TK_identificador TK_inicio_parentesis l_ll TK_fin_parentesis

  111 funcion_ll: %empty

  112 l_ll: expresion TK_separador l_ll
  113     | expresion

  114 M: %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_entonces (258) 94 95
    TK_accion (259) 101
    TK_algoritmo (260) 1
    TK_booleano (261) 26
    TK_cadena (262) 29
    TK_caracter (263) 28
    TK_const (264) 16
    TK_continuar (265) 88
    TK_de (266) 21
    TK_dev (267) 102 104
    TK_ent (268) 62 107
    TK_entero (269) 25
    TK_entsal (270) 109
    TK_faccion (271) 101
    TK_falgoritmo (272) 1
    TK_fconst (273) 16
    TK_ffuncion (274) 102
    TK_fmientras (275) 99
    TK_fpara (276) 100
    TK_fsi (277) 94
    TK_ftipo (278) 15
    TK_ftupla (279) 20
    TK_funcion (280) 102
    TK_fvar (281) 17
    TK_hacer (282) 99 100
    TK_mientras (283) 99
    TK_para (284) 100
    TK_hasta (285) 100
    TK_real (286) 27
    TK_ref (287) 24 85
    TK_sal (288) 63 108
    TK_si (289) 94
    TK_tabla (290) 21
    TK_tipo (291) 15
    TK_tupla (292) 20
    TK_var (293) 17
    TK_comentario_pre (294) 2
    TK_comentario_post (295) 3
    TK_asignacion (296) 93 100
    TK_composicion_secuencial (297) 1 18 32 34 35 36 37 38 40 62 63 86 103 104 105 107 108 109
    TK_separador (298) 42 45 48 50 53 55 58 112
    TK_subrango (299) 21 23
    TK_definicion (300) 32 44 47 49 52 54 57 107 108 109
    TK_si_no_si (301) 95
    TK_inicio_array (302) 21 84
    TK_fin_array (303) 21 84
    TK_inicio_parentesis (304) 70 103 104 110
    TK_literal_entero <val_int> (305) 36 73
    TK_literal_caracter <val_char> (306) 31 35
    TK_literal_cadena <val_string> (307) 34
    TK_literal_real <val_double> (308) 37 72
    TK_literal_booleano <val_int> (309) 38 78
    TK_identificador <val_string> (310) 1 18 22 32 34 35 36 37 38 42 43 44 45 47 48 49 50 52 53 54 55 57 58 83 100 103 104 110
    TK_o (311) 76
    TK_y (312) 75
    TK_comparador <val_string> (313) 79
    TK_igual (314) 18 34 35 36 37 38 80
    TK_no (315) 77
    TK_op_suma (316) 64
    TK_op_resta (317) 65 74
    TK_op_division (318) 67
    TK_div (319) 69
    TK_op_multiplicador (320) 66
    TK_mod (321) 68
    TK_fin_parentesis (322) 70 103 104 110


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    desc_algoritmo (69)
        on left: 1
        on right: 0
    cabecera_alg (70)
        on left: 2
        on right: 1
    bloque_alg (71)
        on left: 3
        on right: 1
    decl_globales (72)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (73)
        on left: 7 8 9
        on right: 2 7 8
    bloque (74)
        on left: 10
        on right: 3 101 102
    declaraciones (75)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo (76)
        on left: 15
        on right: 4 11
    declaracion_cte (77)
        on left: 16
        on right: 5 12
    declaracion_var (78)
        on left: 17
        on right: 13
    lista_d_tipo (79)
        on left: 18 19
        on right: 15 18
    d_tipo <tipo> (80)
        on left: 20 21 22 23 24 25 26 27 28 29
        on right: 18 21 24 32 44 47 49 52 54 57 104 107 108 109
    expresion_t (81)
        on left: 30 31
        on right: 21 23
    lista_campos (82)
        on left: 32 33
        on right: 20 32
    lista_d_cte (83)
        on left: 34 35 36 37 38 39
        on right: 16 34 35 36 37 38
    lista_d_var (84)
        on left: 40 41
        on right: 17 40 104
    lista_id (85)
        on left: 42 43
        on right: 42 107 108 109
    lista_id_var_o_no <lista> (86)
        on left: 44 45 46
        on right: 48
    lista_id_var <lista> (87)
        on left: 47 48
        on right: 40 45
    lista_id_ent_o_no <lista> (88)
        on left: 49 50 51
        on right: 53
    lista_id_ent <lista> (89)
        on left: 52 53
        on right: 50 62
    lista_id_sal_o_no <lista> (90)
        on left: 54 55 56
        on right: 58
    lista_id_sal <lista> (91)
        on left: 57 58
        on right: 55 63
    decl_ent_sal (92)
        on left: 59 60 61
        on right: 2
    decl_ent (93)
        on left: 62
        on right: 59 60
    decl_sal (94)
        on left: 63
        on right: 60 61
    exp_a <e> (95)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 64 65 66 67 68 69 70 74 75 76 77 81
    expresion <e> (96)
        on left: 81 82
        on right: 30 79 80 84 93 94 99 100 102 112 113
    operando <e> (97)
        on left: 83 84 85
        on right: 71 84 85 93
    instrucciones <e> (98)
        on left: 86 87
        on right: 10 86 94 95 99 100
    instruccion <e> (99)
        on left: 88 89 90 91 92
        on right: 86 87
    asignacion <e> (100)
        on left: 93
        on right: 89
    alternativa (101)
        on left: 94
        on right: 90
    lista_opciones (102)
        on left: 95 96
        on right: 94 95
    iteracion (103)
        on left: 97 98
        on right: 91
    it_cota_exp (104)
        on left: 99
        on right: 98
    it_cota_fija (105)
        on left: 100
        on right: 97
    accion_d (106)
        on left: 101
        on right: 7
    funcion_d (107)
        on left: 102
        on right: 8
    a_cabecera (108)
        on left: 103
        on right: 101
    f_cabecera (109)
        on left: 104
        on right: 102
    d_par_form (110)
        on left: 105 106
        on right: 103 105
    d_p_form (111)
        on left: 107 108 109
        on right: 105
    accion_ll (112)
        on left: 110
        on right: 92
    funcion_ll (113)
        on left: 111
        on right: 82
    l_ll (114)
        on left: 112 113
        on right: 110 112
    M <val_int> (115)
        on left: 114
        on right: 75 76 86


State 0

    0 $accept: . desc_algoritmo $end

    TK_algoritmo  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: TK_algoritmo . TK_identificador TK_composicion_secuencial cabecera_alg bloque_alg TK_falgoritmo

    TK_identificador  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo . $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: TK_algoritmo TK_identificador . TK_composicion_secuencial cabecera_alg bloque_alg TK_falgoritmo

    TK_composicion_secuencial  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end .

    $default  accept


State 5

    1 desc_algoritmo: TK_algoritmo TK_identificador TK_composicion_secuencial . cabecera_alg bloque_alg TK_falgoritmo

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    cabecera_alg      go to state 8
    decl_globales     go to state 9
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 6

   16 declaracion_cte: TK_const . lista_d_cte TK_fconst

    TK_identificador  shift, and go to state 12

    $default  reduce using rule 39 (lista_d_cte)

    lista_d_cte  go to state 13


State 7

   15 declaracion_tipo: TK_tipo . lista_d_tipo TK_ftipo

    TK_identificador  shift, and go to state 14

    $default  reduce using rule 19 (lista_d_tipo)

    lista_d_tipo  go to state 15


State 8

    1 desc_algoritmo: TK_algoritmo TK_identificador TK_composicion_secuencial cabecera_alg . bloque_alg TK_falgoritmo

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7
    TK_var    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque_alg        go to state 17
    bloque            go to state 18
    declaraciones     go to state 19
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal TK_comentario_pre

    TK_accion   shift, and go to state 23
    TK_funcion  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 25
    accion_d   go to state 26
    funcion_d  go to state 27


State 10

    4 decl_globales: declaracion_tipo . decl_globales

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales     go to state 28
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 11

    5 decl_globales: declaracion_cte . decl_globales

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales     go to state 29
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 12

   34 lista_d_cte: TK_identificador . TK_igual TK_literal_cadena TK_composicion_secuencial lista_d_cte
   35            | TK_identificador . TK_igual TK_literal_caracter TK_composicion_secuencial lista_d_cte
   36            | TK_identificador . TK_igual TK_literal_entero TK_composicion_secuencial lista_d_cte
   37            | TK_identificador . TK_igual TK_literal_real TK_composicion_secuencial lista_d_cte
   38            | TK_identificador . TK_igual TK_literal_booleano TK_composicion_secuencial lista_d_cte

    TK_igual  shift, and go to state 30


State 13

   16 declaracion_cte: TK_const lista_d_cte . TK_fconst

    TK_fconst  shift, and go to state 31


State 14

   18 lista_d_tipo: TK_identificador . TK_igual d_tipo TK_composicion_secuencial lista_d_tipo

    TK_igual  shift, and go to state 32


State 15

   15 declaracion_tipo: TK_tipo lista_d_tipo . TK_ftipo

    TK_ftipo  shift, and go to state 33


State 16

   17 declaracion_var: TK_var . lista_d_var TK_fvar

    TK_identificador  shift, and go to state 34

    $default  reduce using rule 41 (lista_d_var)

    lista_d_var   go to state 35
    lista_id_var  go to state 36


State 17

    1 desc_algoritmo: TK_algoritmo TK_identificador TK_composicion_secuencial cabecera_alg bloque_alg . TK_falgoritmo

    TK_falgoritmo  shift, and go to state 37


State 18

    3 bloque_alg: bloque . TK_comentario_post

    TK_comentario_post  shift, and go to state 38


State 19

   10 bloque: declaraciones . instrucciones

    TK_continuar      shift, and go to state 39
    TK_mientras       shift, and go to state 40
    TK_para           shift, and go to state 41
    TK_si             shift, and go to state 42
    TK_identificador  shift, and go to state 43

    operando       go to state 44
    instrucciones  go to state 45
    instruccion    go to state 46
    asignacion     go to state 47
    alternativa    go to state 48
    iteracion      go to state 49
    it_cota_exp    go to state 50
    it_cota_fija   go to state 51
    accion_ll      go to state 52


State 20

   11 declaraciones: declaracion_tipo . declaraciones

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7
    TK_var    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 53
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 21

   12 declaraciones: declaracion_cte . declaraciones

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7
    TK_var    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 54
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 22

   13 declaraciones: declaracion_var . declaraciones

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7
    TK_var    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 55
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 23

  101 accion_d: TK_accion . a_cabecera bloque TK_faccion

    TK_identificador  shift, and go to state 56

    a_cabecera  go to state 57


State 24

  102 funcion_d: TK_funcion . f_cabecera bloque TK_dev expresion TK_ffuncion

    TK_identificador  shift, and go to state 58

    f_cabecera  go to state 59


State 25

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal TK_comentario_pre

    TK_ent  shift, and go to state 60
    TK_sal  shift, and go to state 61

    decl_ent_sal  go to state 62
    decl_ent      go to state 63
    decl_sal      go to state 64


State 26

    7 decl_a_f: accion_d . decl_a_f

    TK_accion   shift, and go to state 23
    TK_funcion  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 65
    accion_d   go to state 26
    funcion_d  go to state 27


State 27

    8 decl_a_f: funcion_d . decl_a_f

    TK_accion   shift, and go to state 23
    TK_funcion  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 66
    accion_d   go to state 26
    funcion_d  go to state 27


State 28

    4 decl_globales: declaracion_tipo decl_globales .

    $default  reduce using rule 4 (decl_globales)


State 29

    5 decl_globales: declaracion_cte decl_globales .

    $default  reduce using rule 5 (decl_globales)


State 30

   34 lista_d_cte: TK_identificador TK_igual . TK_literal_cadena TK_composicion_secuencial lista_d_cte
   35            | TK_identificador TK_igual . TK_literal_caracter TK_composicion_secuencial lista_d_cte
   36            | TK_identificador TK_igual . TK_literal_entero TK_composicion_secuencial lista_d_cte
   37            | TK_identificador TK_igual . TK_literal_real TK_composicion_secuencial lista_d_cte
   38            | TK_identificador TK_igual . TK_literal_booleano TK_composicion_secuencial lista_d_cte

    TK_literal_entero    shift, and go to state 67
    TK_literal_caracter  shift, and go to state 68
    TK_literal_cadena    shift, and go to state 69
    TK_literal_real      shift, and go to state 70
    TK_literal_booleano  shift, and go to state 71


State 31

   16 declaracion_cte: TK_const lista_d_cte TK_fconst .

    $default  reduce using rule 16 (declaracion_cte)


State 32

   18 lista_d_tipo: TK_identificador TK_igual . d_tipo TK_composicion_secuencial lista_d_tipo

    TK_booleano           shift, and go to state 72
    TK_cadena             shift, and go to state 73
    TK_caracter           shift, and go to state 74
    TK_entero             shift, and go to state 75
    TK_real               shift, and go to state 76
    TK_ref                shift, and go to state 77
    TK_tabla              shift, and go to state 78
    TK_tupla              shift, and go to state 79
    TK_inicio_parentesis  shift, and go to state 80
    TK_literal_entero     shift, and go to state 81
    TK_literal_caracter   shift, and go to state 82
    TK_literal_real       shift, and go to state 83
    TK_literal_booleano   shift, and go to state 84
    TK_identificador      shift, and go to state 85
    TK_no                 shift, and go to state 86
    TK_op_resta           shift, and go to state 87

    $default  reduce using rule 111 (funcion_ll)

    d_tipo       go to state 88
    expresion_t  go to state 89
    exp_a        go to state 90
    expresion    go to state 91
    operando     go to state 92
    funcion_ll   go to state 93


State 33

   15 declaracion_tipo: TK_tipo lista_d_tipo TK_ftipo .

    $default  reduce using rule 15 (declaracion_tipo)


State 34

   47 lista_id_var: TK_identificador . TK_definicion d_tipo
   48             | TK_identificador . TK_separador lista_id_var_o_no

    TK_separador   shift, and go to state 94
    TK_definicion  shift, and go to state 95


State 35

   17 declaracion_var: TK_var lista_d_var . TK_fvar

    TK_fvar  shift, and go to state 96


State 36

   40 lista_d_var: lista_id_var . TK_composicion_secuencial lista_d_var

    TK_composicion_secuencial  shift, and go to state 97


State 37

    1 desc_algoritmo: TK_algoritmo TK_identificador TK_composicion_secuencial cabecera_alg bloque_alg TK_falgoritmo .

    $default  reduce using rule 1 (desc_algoritmo)


State 38

    3 bloque_alg: bloque TK_comentario_post .

    $default  reduce using rule 3 (bloque_alg)


State 39

   88 instruccion: TK_continuar .

    $default  reduce using rule 88 (instruccion)


State 40

   99 it_cota_exp: TK_mientras . expresion TK_hacer instrucciones TK_fmientras

    TK_inicio_parentesis  shift, and go to state 80
    TK_literal_entero     shift, and go to state 81
    TK_literal_real       shift, and go to state 83
    TK_literal_booleano   shift, and go to state 84
    TK_identificador      shift, and go to state 98
    TK_no                 shift, and go to state 86
    TK_op_resta           shift, and go to state 87

    $default  reduce using rule 111 (funcion_ll)

    exp_a       go to state 90
    expresion   go to state 99
    operando    go to state 92
    funcion_ll  go to state 93


State 41

  100 it_cota_fija: TK_para . TK_identificador TK_asignacion expresion TK_hasta expresion TK_hacer instrucciones TK_fpara

    TK_identificador  shift, and go to state 100


State 42

   94 alternativa: TK_si . expresion TK_entonces instrucciones lista_opciones TK_fsi

    TK_inicio_parentesis  shift, and go to state 80
    TK_literal_entero     shift, and go to state 81
    TK_literal_real       shift, and go to state 83
    TK_literal_booleano   shift, and go to state 84
    TK_identificador      shift, and go to state 98
    TK_no                 shift, and go to state 86
    TK_op_resta           shift, and go to state 87

    $default  reduce using rule 111 (funcion_ll)

    exp_a       go to state 90
    expresion   go to state 101
    operando    go to state 92
    funcion_ll  go to state 93


State 43

   83 operando: TK_identificador .
  110 accion_ll: TK_identificador . TK_inicio_parentesis l_ll TK_fin_parentesis

    TK_inicio_parentesis  shift, and go to state 102

    $default  reduce using rule 83 (operando)


State 44

   84 operando: operando . TK_inicio_array expresion TK_fin_array
   85         | operando . TK_ref
   93 asignacion: operando . TK_asignacion expresion

    TK_ref           shift, and go to state 103
    TK_asignacion    shift, and go to state 104
    TK_inicio_array  shift, and go to state 105


State 45

   10 bloque: declaraciones instrucciones .

    $default  reduce using rule 10 (bloque)


State 46

   86 instrucciones: instruccion . TK_composicion_secuencial M instrucciones
   87              | instruccion .

    TK_composicion_secuencial  shift, and go to state 106

    $default  reduce using rule 87 (instrucciones)


State 47

   89 instruccion: asignacion .

    $default  reduce using rule 89 (instruccion)


State 48

   90 instruccion: alternativa .

    $default  reduce using rule 90 (instruccion)


State 49

   91 instruccion: iteracion .

    $default  reduce using rule 91 (instruccion)


State 50

   98 iteracion: it_cota_exp .

    $default  reduce using rule 98 (iteracion)


State 51

   97 iteracion: it_cota_fija .

    $default  reduce using rule 97 (iteracion)


State 52

   92 instruccion: accion_ll .

    $default  reduce using rule 92 (instruccion)


State 53

   11 declaraciones: declaracion_tipo declaraciones .

    $default  reduce using rule 11 (declaraciones)


State 54

   12 declaraciones: declaracion_cte declaraciones .

    $default  reduce using rule 12 (declaraciones)


State 55

   13 declaraciones: declaracion_var declaraciones .

    $default  reduce using rule 13 (declaraciones)


State 56

  103 a_cabecera: TK_identificador . TK_inicio_parentesis d_par_form TK_fin_parentesis TK_composicion_secuencial

    TK_inicio_parentesis  shift, and go to state 107


State 57

  101 accion_d: TK_accion a_cabecera . bloque TK_faccion

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7
    TK_var    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque            go to state 108
    declaraciones     go to state 19
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 58

  104 f_cabecera: TK_identificador . TK_inicio_parentesis lista_d_var TK_fin_parentesis TK_dev d_tipo TK_composicion_secuencial

    TK_inicio_parentesis  shift, and go to state 109


State 59

  102 funcion_d: TK_funcion f_cabecera . bloque TK_dev expresion TK_ffuncion

    TK_const  shift, and go to state 6
    TK_tipo   shift, and go to state 7
    TK_var    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque            go to state 110
    declaraciones     go to state 19
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 60

   62 decl_ent: TK_ent . lista_id_ent TK_composicion_secuencial

    TK_identificador  shift, and go to state 111

    lista_id_ent  go to state 112


State 61

   63 decl_sal: TK_sal . lista_id_sal TK_composicion_secuencial

    TK_identificador  shift, and go to state 113

    lista_id_sal  go to state 114


State 62

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal . TK_comentario_pre

    TK_comentario_pre  shift, and go to state 115


State 63

   59 decl_ent_sal: decl_ent .
   60             | decl_ent . decl_sal

    TK_sal  shift, and go to state 61

    $default  reduce using rule 59 (decl_ent_sal)

    decl_sal  go to state 116


State 64

   61 decl_ent_sal: decl_sal .

    $default  reduce using rule 61 (decl_ent_sal)


State 65

    7 decl_a_f: accion_d decl_a_f .

    $default  reduce using rule 7 (decl_a_f)


State 66

    8 decl_a_f: funcion_d decl_a_f .

    $default  reduce using rule 8 (decl_a_f)


State 67

   36 lista_d_cte: TK_identificador TK_igual TK_literal_entero . TK_composicion_secuencial lista_d_cte

    TK_composicion_secuencial  shift, and go to state 117


State 68

   35 lista_d_cte: TK_identificador TK_igual TK_literal_caracter . TK_composicion_secuencial lista_d_cte

    TK_composicion_secuencial  shift, and go to state 118


State 69

   34 lista_d_cte: TK_identificador TK_igual TK_literal_cadena . TK_composicion_secuencial lista_d_cte

    TK_composicion_secuencial  shift, and go to state 119


State 70

   37 lista_d_cte: TK_identificador TK_igual TK_literal_real . TK_composicion_secuencial lista_d_cte

    TK_composicion_secuencial  shift, and go to state 120


State 71

   38 lista_d_cte: TK_identificador TK_igual TK_literal_booleano . TK_composicion_secuencial lista_d_cte

    TK_composicion_secuencial  shift, and go to state 121


State 72

   26 d_tipo: TK_booleano .

    $default  reduce using rule 26 (d_tipo)


State 73

   29 d_tipo: TK_cadena .

    $default  reduce using rule 29 (d_tipo)


State 74

   28 d_tipo: TK_caracter .

    $default  reduce using rule 28 (d_tipo)


State 75

   25 d_tipo: TK_entero .

    $default  reduce using rule 25 (d_tipo)


State 76

   27 d_tipo: TK_real .

    $default  reduce using rule 27 (d_tipo)


State 77

   24 d_tipo: TK_ref . d_tipo

    TK_booleano           shift, and go to state 72
    TK_cadena             shift, and go to state 73
    TK_caracter           shift, and go to state 74
    TK_entero             shift, and go to state 75
    TK_real               shift, and go to state 76
    TK_ref                shift, and go to state 77
    TK_tabla              shift, and go to state 78
    TK_tupla              shift, and go to state 79
    TK_inicio_parentesis  shift, and go to state 80
    TK_literal_entero     shift, and go to state 81
    TK_literal_caracter   shift, and go to state 82
    TK_literal_real       shift, and go to state 83
    TK_literal_booleano   shift, and go to state 84
    TK_identificador      shift, and go to state 85
    TK_no                 shift, and go to state 86
    TK_op_resta           shift, and go to state 87

    $default  reduce using rule 111 (funcion_ll)

    d_tipo       go to state 122
    expresion_t  go to state 89
    exp_a        go to state 90
    expresion    go to state 91
    operando     go to state 92
    funcion_ll   go to state 93


State 78

   21 d_tipo: TK_tabla . TK_inicio_array expresion_t TK_subrango expresion_t TK_fin_array TK_de d_tipo

    TK_inicio_array  shift, and go to state 123


State 79

   20 d_tipo: TK_tupla . lista_campos TK_ftupla

    TK_identificador  shift, and go to state 124

    $default  reduce using rule 33 (lista_campos)

    lista_campos  go to state 125


State 80

   70 exp_a: TK_inicio_parentesis . exp_a TK_fin_parentesis

    TK_inicio_parentesis  shift, and go to state 80
    TK_literal_entero     shift, and go to state 81
    TK_literal_real       shift, and go to state 83
    TK_literal_booleano   shift, and go to state 84
    TK_identificador      shift, and go to state 98
    TK_no                 shift, and go to state 86
    TK_op_resta           shift, and go to state 87

    $default  reduce using rule 111 (funcion_ll)

    exp_a       go to state 126
    expresion   go to state 127
    operando    go to state 92
    funcion_ll  go to state 93


State 81

   73 exp_a: TK_literal_entero .

    $default  reduce using rule 73 (exp_a)


State 82

   31 expresion_t: TK_literal_caracter .

    $default  reduce using rule 31 (expresion_t)


State 83

   72 exp_a: TK_literal_real .

    $default  reduce using rule 72 (exp_a)


State 84

   78 exp_a: TK_literal_booleano .

    $default  reduce using rule 78 (exp_a)


State 85

   22 d_tipo: TK_identificador .
   83 operando: TK_identificador .

    TK_composicion_secuencial  reduce using rule 22 (d_tipo)
    $default                   reduce using rule 83 (operando)


State 86

   77 exp_a: TK_no . exp_a

    TK_inicio_parentesis  shift, and go to state 80
    TK_literal_entero     shift, and go to state 81
    TK_literal_real       shift, and go to state 83
    TK_literal_booleano   shift, and go to state 84
    TK_identificador      shift, and go to state 98
    TK_no                 shift, and go to state 86
    TK_op_resta           shift, and go to state 87

    $default  reduce using rule 111 (funcion_ll)

    exp_a       go to state 128
    expresion   go to state 127
    operando    go to state 92
    funcion_ll  go to state 93


State 87

   74 exp_a: TK_op_resta . exp_a

    TK_inicio_parentesis  shift, and go to state 80
    TK_literal_entero     shift, and go to state 81
    TK_literal_real       shift, and go to state 83
    TK_literal_booleano   shift, and go to state 84
    TK_identificador      shift, and go to state 98
    TK_no                 shift, and go to state 86
    TK_op_resta           shift, and go to state 87

    $default  reduce using rule 111 (funcion_ll)

    exp_a       go to state 129
    expresion   go to state 127
    operando    go to state 92
    funcion_ll  go to state 93


State 88

   18 lista_d_tipo: TK_identificador TK_igual d_tipo . TK_composicion_secuencial lista_d_tipo

    TK_composicion_secuencial  shift, and go to state 130


State 89

   23 d_tipo: expresion_t . TK_subrango expresion_t

    TK_subrango  shift, and go to state 131


State 90

   64 exp_a: exp_a . TK_op_suma exp_a
   65      | exp_a . TK_op_resta exp_a
   66      | exp_a . TK_op_multiplicador exp_a
   67      | exp_a . TK_op_division exp_a
   68      | exp_a . TK_mod exp_a
   69      | exp_a . TK_div exp_a
   75      | exp_a . TK_y M exp_a
   76      | exp_a . TK_o M exp_a
   81 expresion: exp_a .
